Fix sizing on mobile

--- a/css/index.scss
+++ b/css/index.scss
@@ -42,6 +42,8 @@ body {
 
 .home-text-title img {
   max-width: 450px;
+  width: 100%;
+
   @media all and (min-width: 640px) {
     max-width: none;
     width: 560px;
