--- a/css/menu.scss
+++ b/css/menu.scss
@@ -27,7 +27,10 @@
 
 .menu-list-item {
   padding: 0 4px;
-  font-size: 3rem;
+  font-size: 2rem;
+  @media all and (min-width: 480px) {
+    font-size: 3rem;
+  }
   text-transform: uppercase;
 }
 
@@ -151,11 +154,17 @@
 }
 
 .switch-front-2 {
-  margin: 32px 0 0 0;
+  margin: 16px 0 0 0;
+  @media all and (min-height: 320px) {
+    margin: 32px 0 0 0;
+  }
 }
 
 .switch-front-3 {
-  margin: 32px 0 0;
+  margin: 16px 0 0 0;
+  @media all and (min-height: 320px) {
+    margin: 32px 0 0 0;
+  }
 }
 
 .switch-active {
